@@ -50,5 +50,5 @@ https://steamcommunity.com/sharedfiles/filedetails/?id=2263021260
 --------------------Mlie's original description--------------------
 See url above.
   </description>
-  <modVersion IgnoreIfNoMatchingField="True">1.5.14e</modVersion>
+  <modVersion IgnoreIfNoMatchingField="True">1.5.14f</modVersion>
 </ModMetaData>
