@@ -1,5 +1,7 @@
 # Changelog for RealFactionGuest
 
+Forked 1.5.14f Fix DamageUntilDowned not bypassing armor. Flag fix 4.
+
 Forked 1.5.14e flag fix. (for compatibility)
 
 Forked 1.5.14d Switch to release build. Small change.
